<resources>
    <string name="app_name">Mi Fit Data Export</string>
    <string name="MiFitDatabaseFolder">/data/data/com.xiaomi.hm.health/databases/</string>
    <string name="ExportInfoText">By Pressing the Export button all Sleep and Steps data will be exported in a .json file.</string>
    <string name="ExportBtn">Export to .json</string>
    <string name="AppFolder">cloud.tninis.mifitexport</string>
    <string name="DialogTitle">Creating File...</string>
    <string name="DialogMes">Copying The Database And Gathering All Data.The Json File Will Be Ready In A While</string>
    <string name="ExportSucces">Successfully Exported .json File</string>
    <string name="ExportFailed">Export Failed, Please Try Again</string>
    <string name="RadioTitle">Select All Dates or Specific Dates Range</string>
    <string name="RadioAll">All Dates</string>
    <string name="RadioSpecific">Dates Range</string>
    <string name="DateFromText">Date From</string>
    <string name="DateToText">Date To</string>

</resources>
